--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>
+
+	* pickles/sframe.pk: Update the pickle for AArch64 PAuth
+	support.
+
 2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.jitter (addiof): New instruction.
