--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>
 
+	* pickles/sframe.pk: Use camel casing for types consistently.
+	* pickles/sframe-dump.pk: Likewise.
+
+2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>
+
 	* pickles/sframe.pk: Update the pickle for AArch64 PAuth
 	support.
 
