--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-02-08  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* pickles/btf.pk (BTF_Header): Add constraint to check hdr_len.
+
 2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.jitter (PVM_BINOP_SL): Remove macro.
