--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-asm.c (pkl_asm_insn): Remove reference to
+	pkl_asm_insn_oto.
+
+2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def: Remove instruction PKL_INSN_OTO.
 	* libpoke/pkl-asm.c (pkl_asm_insn_oto): Remove.
 	(pkl_asm_insn): Do not handle PKL_INSN_OTO.
