--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* common/pk-utils.h: Include assert.h.
+	* libpoke/libpoke.c: Do not include assert.h.
+	* poke/pk-cmd.c: Likewise.
+	* poke/pk-ios.c: Likewise.
+
+2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-asm.c (pkl_asm_insn): Remove reference to
 	pkl_asm_insn_oto.
 
