--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pkl/in-10.pk: New test.
+	* testsuite/poke.pkl/in-11.pk: Likewise.
+
+2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* common/pk-utils.h: Include assert.h.
 	* libpoke/libpoke.c: Do not include assert.h.
 	* poke/pk-cmd.c: Likewise.
