--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
-2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
+2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-asm.pks (ais): Rewrite.
+	(eqa): Do not revert argument arrays.
 	* testsuite/poke.pkl/in-10.pk: New test.
 	* testsuite/poke.pkl/in-11.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
 
 2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
