--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.h (PKL_AST_STRUCT_REF_INDIRECTION_P): Define.
+	(struct pkl_ast_struct_ref): New field indirection_p.
+	* libpoke/pkl-tab.y: New token IND.
+	(primary): New rule for indirecting struct fields.
+	* libpoke/pkl-lex.l: Recognize token IND.
+	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_ref): Handle
+	indirected struct references.
+	* libpoke/pkl-trans.c (pkl_trans2_ps_struct_ref): Transform
+	indirected struct references into mapping operations.
+	* libpoke/pkl-gen.c (pkl_gen_ps_struct_ref): Support indirections.
+	(pkl_gen_pr_ass_stmt): Likewise.
+	* testsuite/poke.pkl/struct-ind-diag-1.pk: New test.
+	* testsuite/poke.pkl/struct-ind-diag-2.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-diag-3.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-diag-4.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-1.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-2.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-3.pk: Likewise.
+	* testsuite/poke.pkl/struct-ind-4.pk: Likewise.
+	* testsuite/poke.pkl/ass-ind-1.pk: Likewise.
+	* testsuite/poke.pkl/ass-ind-2.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.h (struct pkl_ast_type): New field ref_type in
