--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.jitter: Use pvm_strcat instead of strcat.
+
 2023-02-19  Bruno Haible  <bruno@clisp.org>
 
 	build: Regenerate pvm-vm.h, pvm-vm1.c, pvm-vm2.c when jitter has changed.
