--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-02-27  Frederic Cambus <fred@statdns.com>
+
+	* INSTALL: Remove section about building the GUI.
+
 2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.jitter: Use pvm_strcat instead of strcat.
