--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-03-16  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.jitter (push32): Fix printers.
+
+2023-03-16  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pvm.jitter (pushlo): Remove.
 	(pushhi): Likewise.
 	(push32): Changed to accept two arguments.
