pkl: support for the 'ref attribute
2023-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-attrs.def: New attribute 'ref.
	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Handle 'ref.
	* libpoke/pkl-anal.c (pkl_anal1_ps_op_attr): Likewise.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_attr): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Likewise.
	* libpoke/pkl-gen-attrs.pks (attr_ref): New macro.
	* testsuite/poke.pkl/attr-ref-diag-1.pk: New test.
	* testsuite/poke.pkl/attr-ref-diag-2.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-diag-3.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-1.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -10146,7 +10146,15 @@ Examples:
 @item mapped
 Always 0 for offsets.  (@pxref{Mapping}).
 @item length
-Always @code{1UL} for integers.
+Always @code{1UL} for offsets.
+@item ref ([IOS])
+If the value is a referring offset, then the application of the
+@code{'ref} attribute implies the mapping of the referred value.
+
+The attribute gets an optional argument which is the IO space to use
+when mapping the referred value.  If this argument is not provided
+then the current IO space is assumed.  The application of this
+attribute may result in a @code{E_no_ios} exception.
 @end table
 
 
