--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2023-04-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-attrs.def: New attribute 'ref.
+	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Handle 'ref.
+	* libpoke/pkl-anal.c (pkl_anal1_ps_op_attr): Likewise.
+	* libpoke/pkl-promo.c (pkl_promo_ps_op_attr): Likewise.
+	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Likewise.
+	* libpoke/pkl-gen-attrs.pks (attr_ref): New macro.
+	* doc/poke.texi (Offset Attributes): Document the 'ref attribute.
+	* testsuite/poke.pkl/attr-ref-diag-1.pk: New test.
+	* testsuite/poke.pkl/attr-ref-diag-2.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-diag-3.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-diag-4.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-1.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-2.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-3.pk: Likewise.
+	* testsuite/poke.pkl/attr-ref-4.pk: New test.
+	* testsuite/poke.pkl/attr-ref-5.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.h (PKL_AST_STRUCT_REF_INDIRECTION_P): Define.
