--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-03-28  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* etc/poke.rec: Remove priority fields.
+
 2023-03-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* common/pk-utils.h (pvm_stof): New declaration.
