--- a/etc/hacking.org
+++ b/etc/hacking.org
@@ -360,11 +360,13 @@ Arsen Arsenović		<arsen@aarsen.me>
    : https://gitlab.com/gnu-poke/ci-distcheck/pipelines
    : https://gitlab.com/gnu-poke/ci-distcheck/-/jobs?scope=finished
 
-   CI is also currently in the process of being deployed on the Sourceware
-   buildbot at https://builder.sourceware.org/.  The sources for this are in
-   the Sourceware =builder.git= repository at
-   https://sourceware.org/git/?p=builder.git. The README file contains a good
-   reference of how to hack on the build machinery.
+   We also have a set of "buildbots" hosted at Sourceware.  See
+   https://builder.sourceware.org/.  The sources for this are in the
+   Sourceware =builder.git= repository at
+   https://sourceware.org/git/?p=builder.git. The README file contains
+   a good reference of how to hack on the build machinery.  The poke
+   homepage contains little graphics indicating the last execution
+   results of these buildbots.
 
    Parts relevant to poke are named =/.*gnupoke.*/= in the Sourceware buildbot
    configuration.  Please see the repository linked above for details.
