--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* etc/hacking.org (Continuous Integration): Update.
+	* HACKING: Regenerate.
+
 2023-04-13  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* doc/poke.texi (Integral Structs): s/little-endian/big-endian/
