--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* NEWS: Add entries for 3.1.
+	* doc/gendocs_template (For version 3.1): Bump version to 3.1.
+	* libpoke/Makefile.am (pvm-vm.h): Remove dependency on $(JITTER).
+
+2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* etc/hacking.org (Continuous Integration): Update.
 	* HACKING: Regenerate.
 
