--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* NEWS: Add entries for 3.1.
+	* doc/gendocs_template (For version 3.1): Bump version to 3.1.
+	* libpoke/Makefile.am (pvm-vm.h): Remove dependency on $(JITTER).
+
 2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_cast): Fix memory leak.
